fixing(?) padding on mobile

--- a/site.css
+++ b/site.css
@@ -48,7 +48,7 @@ h1{
         display: inline-block;
     }
     .section{
-        padding: 25vh 10vh;
+        padding: 35vh 10vh;
     }
 }
 
